compiler/testData/diagnostics/tests/deprecated/imports.kt
import <!DEPRECATION!>C<!> as C2

@Deprecated("obsolete")
class C {
    fun use() {}
}

fun useAlias(c : <!DEPRECATION!>C2<!>) { c.use() }
